<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_button_text">Поиск</string>
    <string name="media_button_text">Медиатека</string>>
    <string name="setting_button_text">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="descr">descr</string>
    <string name="shareMessage">https://practicum.yandex.ru/android-developer/</string>
    <string name="studentEmal">mikheenkoden@yandex.ru</string>
    <string name="messageThemeToSupportTeam">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="messageToSupportTeam">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="userAgreementURI">https://yandex.ru/legal/practicum_offer/</string>
    <string name="editTextHint">Поиск</string>
    <string name="nothingFound">Ничего не нашлось</string>
    <string name="connectionError">Проблемы со связью</string>
    <string name="checkConnection">Загрузка не удалась. Проверьте подключение к интеренету</string>
    <string name="refresh">Обновить</string>
    <string name="search_history_header">Вы искали</string>
    <string name="clear_history_button_header">Очистить историю</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favtracksempty">Ваша медиатека пуста</string>
    <string name="mediateca_header">Медиатека</string>
    <string name="no_playlist_created">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist_button_name">Новый плейлист</string>
    <string name="FavoriteTracksSign">Избранные треки</string>
    <string name="PlaylistSign">Плейлисты</string>
    <string name="new_playlist_header_text">Новый плейлист</string>
    <string name="create_playlist_button_name">Создать</string>
    <string name="desc">Описание</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="sharePlaylist">Поделиться</string>
    <string name="editPlailistButtonText">Редактировать информацию</string>
    <string name="deletePlaylist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="no_tracks">В этом плейлисте нет треков</string>
</resources>