<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ConnectionErrorPlaceHolderStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/connectionError"
        android:textSize="19sp"
        android:theme="@style/ConnectionErrorPlaceHolderStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_horizontal"
        android:text="@string/checkConnection"
        android:textSize="19sp"
        android:theme="@style/ConnectionErrorPlaceHolderStyle" />

    <Button
        android:id="@+id/updateRequestBtn"
        android:layout_width="@dimen/refresh_button_width"
        android:layout_height="@dimen/refresh_button_height"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/refresh"
        android:textAllCaps="false"
        android:textSize="@dimen/refresh_button_text_size"
        android:theme="@style/ConnectionErrRefreshButtonTheme" />

</LinearLayout>