<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_gravity="center_vertical"
        android:fontFamily="@font/buttonnamefont"
        android:gravity="center_vertical"
        android:text="@string/setting_button_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:iconGravity="textEnd"
        app:iconTint="@color/black"
        android:paddingStart="@dimen/setting_activity_button_padding_start"
        android:drawablePadding="12dp"
        android:layout_marginBottom="24dp"
        app:drawableStartCompat="@drawable/ic_arrow"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_activity_button_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/buttonnamefont"
            android:paddingStart="@dimen/setting_activity_button_padding_start"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_activity_button_text_size"
            tools:ignore="RtlSymmetry" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_activity_button_height"
        android:layout_gravity="center_vertical"
        android:drawableEnd="@drawable/ic_share"
        android:fontFamily="@font/buttonnamefont"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/setting_activity_button_padding_start"
        android:paddingEnd="@dimen/setting_activity_button_padding_end"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="@dimen/setting_activity_button_text_size"
        app:iconGravity="textEnd"
        app:iconTint="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_activity_button_height"
        android:layout_gravity="center_vertical"
        android:drawableEnd="@drawable/ic_support"
        android:fontFamily="@font/buttonnamefont"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/setting_activity_button_padding_start"
        android:paddingEnd="@dimen/setting_activity_button_padding_end"
        android:text="@string/write_to_support"
        android:textColor="@color/black"
        android:textSize="@dimen/setting_activity_button_text_size"
        app:iconGravity="textEnd"
        app:iconTint="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_activity_button_height"
        android:layout_gravity="center_vertical"
        android:drawableEnd="@drawable/arrow_right"
        android:fontFamily="@font/buttonnamefont"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/setting_activity_button_padding_start"
        android:paddingEnd="@dimen/setting_activity_button_padding_end"
        android:text="@string/user_agreement"
        android:textColor="@color/black"
        android:textSize="@dimen/setting_activity_button_text_size"
        app:iconGravity="textEnd"
        app:iconTint="@color/black" />


</LinearLayout>