<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootElement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_edit_background"
    tools:context=".media_library.ui.activity.PlaylistDetailsFragment">

    <!-- AppBarLayout для управления заголовком и изображением -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- CollapsingToolbarLayout для создания эффекта "перекрытия" -->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!-- Изображение плейлиста -->
            <ImageView
                android:id="@+id/playlistImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:minHeight="200dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/player_image_placeholder" />

            <!-- Заголовок плейлиста -->
            <TextView
                android:id="@+id/playlistDetailsHeader"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:drawableStart="@drawable/ic_arrow"
                android:paddingStart="@dimen/editTextDrawablePadding"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/playlistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/editTextDrawablePadding"
            android:layout_marginTop="@dimen/editTextDrawablePadding"
            android:layout_marginEnd="@dimen/editTextDrawablePadding"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_bold"
            android:maxLines="1"
            android:textColor="@color/icon_color"
            android:textSize="@dimen/_24sp"
            tools:text="Playlist Name" />

        <TextView
            android:id="@+id/playlistDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/editTextDrawablePadding"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/editTextDrawablePadding"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:textColor="@color/icon_color"
            android:textSize="@dimen/_18sp"
            tools:text="Playlist Description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/editTextDrawablePadding"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/editTextDrawablePadding"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/playlistPlayingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:gravity="center_vertical"
                android:maxLength="40"
                android:maxLines="1"
                android:textColor="@color/icon_color"
                android:textSize="@dimen/_18sp"
                tools:text="300 минут" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/Margin_separator"
                android:src="@drawable/ic_point_separator_light" />

            <TextView
                android:id="@+id/tracksCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:gravity="center_vertical"
                android:maxLength="40"
                android:maxLines="1"
                android:textColor="@color/icon_color"
                android:textSize="@dimen/_18sp"
                tools:text="3 трека" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/editTextDrawablePadding"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/editTextDrawablePadding">

            <ImageView
                android:id="@+id/sharePlaylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/Margin_separator"
                android:src="@drawable/share_playlist_icon" />

            <ImageView
                android:id="@+id/playlistOption"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/Margin_separator"
                android:src="@drawable/playlist_options_icon" />
        </LinearLayout>
    </LinearLayout>

    <!-- BottomSheet -->
    <LinearLayout
        android:id="@+id/bottomSheetPlaylistDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:theme="@style/BottomSheetBackgroundStyle"
        app:behavior_hideable="false"
        app:behavior_peekHeight="200dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:theme="@style/BottomSheetTopPointTheme" />

        <include
            android:id="@+id/no_tracks_placeholder"
            layout="@layout/empty_playlist_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPlaylistTracks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomSheetOptions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:theme="@style/BottomSheetBackgroundStyle"
        android:visibility="gone"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:theme="@style/BottomSheetTopPointTheme" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/playlistImageViewPlayer"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginStart="@dimen/_20dp"
                android:paddingBottom="@dimen/_8dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/player_image_placeholder" />

            <TextView
                android:id="@+id/playlistNamePlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:paddingTop="4dp"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/playlistImageViewPlayer"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Лучшие треки" />

            <TextView
                android:id="@+id/tracksCountPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:textSize="12sp"
                android:theme="@style/TextViewTrackCount"
                app:layout_constraintStart_toEndOf="@id/playlistImageViewPlayer"
                app:layout_constraintTop_toBottomOf="@id/playlistNamePlayer"
                tools:text="98 треков" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/shareButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_activity_button_height"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_20dp"
            android:text="@string/sharePlaylist"
            android:textSize="16sp"
            android:theme="@style/PlayerTextViewTheme" />

        <TextView
            android:id="@+id/editPlaylist"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_activity_button_height"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_20dp"
            android:text="@string/editPlailistButtonText"
            android:textSize="16sp"
            android:theme="@style/PlayerTextViewTheme" />

        <TextView
            android:id="@+id/deletePlaylist"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_activity_button_height"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_20dp"
            android:text="@string/deletePlaylist"
            android:textSize="16sp"
            android:theme="@style/PlayerTextViewTheme" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>